--- a/django-models/relationship_app/templates/relationship_app/librarian_view.html
+++ b/django-models/relationship_app/templates/relationship_app/librarian_view.html
@@ -1,10 +1,12 @@
+<!-- librarian_view.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Librarian View</title>
+    <meta charset="UTF-8">
+    <title>Librarian View</title>
 </head>
 <body>
-  <p>Welcome Librarian</p>
+    <h1>Welcome, Librarian!</h1>
+    <!-- Librarian-specific content -->
 </body>
 </html>
