--- a/django-models/relationship_app/templates/relationship_app/member_view.html
+++ b/django-models/relationship_app/templates/relationship_app/member_view.html
@@ -1,3 +1,4 @@
+<!-- member_view.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,7 @@
     <title>Member View</title>
 </head>
 <body>
-  <p>Welcome Member</p>
+    <h1>Welcome, Member!</h1>
+    <!-- Member-specific content -->
 </body>
 </html>
