--- a/django-models/relationship_app/templates/relationship_app/admin_view.html
+++ b/django-models/relationship_app/templates/relationship_app/admin_view.html
@@ -1,10 +1,12 @@
+<!-- admin_view.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Admin View</title>
+    <meta charset="UTF-8">
+    <title>Admin View</title>
 </head>
 <body>
-  <p>Welcome Admin</p>
+    <h1>Welcome, Admin!</h1>
+    <!-- Admin-specific content -->
 </body>
 </html>
